--- a/graphql-basics/package.json
+++ b/graphql-basics/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@types/node": "^14.14.19",
     "nodemon": "^2.0.6"
+  },
+  "dependencies": {
+    "graphql-yoga": "^1.18.3"
   }
 }
