--- a/graphql-basics/package.json
+++ b/graphql-basics/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "uuid": "^8.3.2"
   }
 }
