--- a/graphql-basics/package.json
+++ b/graphql-basics/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.19",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.6"
   },
   "dependencies": {
