--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-prisma",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "Bernardo Quina",
   "license": "MIT",
   "scripts": {
