--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@prisma/client": "2.14.0",
     "apollo-server": "^2.19.1",
+    "bcryptjs": "^2.4.3",
     "graphql": "^15.4.0",
     "nexus": "^1.0.0",
     "nexus-plugin-prisma": "^0.28.0"
   },
   "devDependencies": {
     "@prisma/cli": "2.14.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^14.14.20",
     "nodemon": "^2.0.7"
   }
