--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -13,13 +13,16 @@
     "@prisma/client": "2.14.0",
     "apollo-server": "^2.19.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
+    "jsonwebtoken": "^8.5.1",
     "nexus": "^1.0.0",
     "nexus-plugin-prisma": "^0.28.0"
   },
   "devDependencies": {
     "@prisma/cli": "2.14.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.20",
     "nodemon": "^2.0.7"
   }
