--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
-    "start": "nodemon dist/index.js",
+    "postinstall": "tsc",
+    "dev": "nodemon dist/index.js",
+    "start": "node dist/index.js",
     "update": "yarn upgrade-interactive --latest"
   },
   "dependencies": {
@@ -25,5 +27,8 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "14.15.4"
   }
 }
