--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -19,7 +19,8 @@
     "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
     "nexus": "^1.0.0",
-    "nexus-plugin-prisma": "^0.28.0"
+    "nexus-plugin-prisma": "^0.28.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@prisma/cli": "2.15.0",
