--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
-    "postinstall": "tsc",
+    "postinstall": "tsc",,
+    "prepare": "npx prisma generate",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "update": "yarn upgrade-interactive --latest"
