--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -36,5 +36,13 @@
   },
   "engines": {
     "node": "14.15.4"
+  },
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "dist"
+    ],
+    "collectCoverageFrom": [
+      "!dist/**/*.js"
+    ]
   }
 }
