--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -24,7 +24,9 @@
     "nexus": "^1.0.0",
     "nexus-plugin-prisma": "^0.28.0",
     "node-fetch": "^2.6.1",
-    "typescript": "^4.1.3"
+    "subscriptions-transport-ws": "^0.9.18",
+    "typescript": "^4.1.3",
+    "ws": "^7.4.2"
   },
   "devDependencies": {
     "@prisma/cli": "2.15.0",
