Incorporating express middleware in apollo server

--- a/graphql-prisma/.env.example
+++ b/graphql-prisma/.env.example
@@ -7,6 +7,10 @@ NODE_ENV=
 
 JWT_SECRET=
 
+#For google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
 # Copy either of these two to DATABASE_URL
 TEST_DATABESE_URL=
 
