--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -16,13 +16,18 @@
     "@apollo/client": "^3.3.7",
     "@prisma/client": "2.15.0",
     "apollo-server": "^2.19.2",
+    "apollo-server-express": "^2.21.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "nexus": "^1.0.0",
     "nexus-plugin-prisma": "^0.28.0",
     "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.1.3",
     "ws": "^7.4.2"
@@ -30,9 +35,12 @@
   "devDependencies": {
     "@prisma/cli": "2.15.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
+    "@types/passport": "^1.0.6",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.4.4"
