--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "dev": "set NODE_ENV=development && nodemon dist/index.js",
+    "dev": "nodemon dist/index.js",
     "test": "jest --testPathIgnorePatterns dist --silent --runInBand",
     "start": "node dist/index.js",
     "update": "yarn upgrade-interactive --latest"
