--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -17,11 +17,13 @@
     "@prisma/client": "2.15.0",
     "apollo-server-express": "^2.21.0",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
+    "ioredis": "^4.23.0",
     "jsonwebtoken": "^8.5.1",
     "nexus": "^1.0.0",
     "nexus-plugin-prisma": "^0.28.0",
@@ -35,14 +37,17 @@
   "devDependencies": {
     "@prisma/cli": "2.15.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.16",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/ioredis": "^4.22.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.6",
+    "@types/redis": "^2.8.28",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.4.4"
