--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -24,15 +24,12 @@
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "ioredis": "^4.23.0",
-    "jsonwebtoken": "^8.5.1",
     "nexus": "^1.0.0",
     "nexus-plugin-prisma": "^0.28.0",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "subscriptions-transport-ws": "^0.9.18",
-    "typescript": "^4.1.3",
-    "ws": "^7.4.2"
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@prisma/cli": "2.15.0",
@@ -42,14 +39,10 @@
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.22.0",
-    "@types/jest": "^26.0.20",
-    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.6",
     "@types/redis": "^2.8.28",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
-    "ts-jest": "^26.4.4"
+    "nodemon": "^2.0.7"
   }
 }
