OAuth with passport-facebook: setup

--- a/graphql-prisma/.env.example
+++ b/graphql-prisma/.env.example
@@ -15,6 +15,11 @@ SESSION_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+#For facebook OAuth
+FACEBOOK_CLIENT_ID=
+
+FACEBOOK_CLIENT_SECRET=
+
 # Copy either of these two to DATABASE_URL
 TEST_DATABESE_URL=
 
