--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nexus": "^1.0.0",
     "nexus-plugin-prisma": "^0.28.0",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -40,6 +41,7 @@
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.22.0",
     "@types/node": "^14.14.22",
+    "@types/nodemailer": "^6.4.1",
     "@types/passport": "^1.0.6",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-google-oauth20": "^2.0.6",
