Forgot password mutation: send email

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ FACEBOOK_CLIENT_ID=
 
 FACEBOOK_CLIENT_SECRET=
 
+NODE_TLS_REJECT_UNAUTHORIZED=
+
+FORGOT_PASSWORD_PREFIX=
+
 # Copy either of these two to DATABASE_URL
 TEST_DATABESE_URL=
 
