--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@prisma/cli": "2.15.0",
@@ -46,6 +47,7 @@
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-google-oauth20": "^2.0.6",
     "@types/redis": "^2.8.28",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7"
   }
 }
