Set my email as transporter

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,10 @@ NODE_TLS_REJECT_UNAUTHORIZED=
 
 FORGOT_PASSWORD_PREFIX=
 
+EMAIL=
+
+EMAIL_PASS=
+
 # Copy either of these two to DATABASE_URL
 TEST_DATABESE_URL=
 
