--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "googleapis": "^68.0.0",
     "graphql": "^15.5.0",
     "ioredis": "^4.23.0",
     "nexus": "^1.0.0",
